--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,22 @@
 :root{
-    --main-color: blue;
+    --botton-blue-color: #1e3a8a;
+    --main-bg-color: #e5e5e5;
+    --color-text: #171717;
+    --title-color: #fef;
+}
+
+button{
+    color: var(--title-color);
+    width: 3rem;
+    border-radius: 3%;
+    margin: 3%;
+    border-radius: 3px;
+    border: none;
+    background-color: var(--botton-blue-color);
+    box-shadow: 1px 1px black;
 }
 
 
-
-#root{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    
-}
 body{
     margin: 0;
     padding: 0;
@@ -21,23 +26,27 @@ body{
 
 
 header{
+    background-color: var(--botton-blue-color);
+    color: var(--title-color);
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 1px 2px 1px;
-    margin-bottom: 3px;
+    
 }
 
 .container{
+    padding-top: 3%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, 1fr);
     min-height: 70vh;
     gap: 3px;
+    background-color: var(--main-bg-color);
     aside{
         grid-column: 1/4;
         grid-row: 1/9; 
-        background-color: none;
+        background-color: var(--main-bg-color);
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -46,9 +55,10 @@ header{
             color: white;
             width: 3rem;
             border-radius: 3%;
+            margin: 3%;
             border-radius: 3px;
             border: none;
-            background-color: blue;
+            background-color: var(--botton-blue-color);
             box-shadow: 1px 1px black;
         }
         button:hover{
@@ -60,23 +70,25 @@ header{
             flex-direction: column;
             justify-content: center;
             align-items: center; 
-            margin-top: 3%; 
+             
         }
         .container-project{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #ecfccb;
+            background-color: var(--sec-bg-color);
             width: 90%;
             box-shadow: 1px 1px 1px 0px black;
             border-radius: 3px;
-            margin-bottom: 3px;
             
+            margin-top: 3%; 
+            margin-bottom: 3%;
         }
     }
     #root{
-        background-color: #ecfccb;
+        margin-top: 3%;
+        background-color: var(--main-bg-color);
         grid-column: 10/13;
         grid-row: 1/9;
         overflow: auto;
@@ -85,13 +97,21 @@ header{
         overflow: auto;
         grid-column: 4/10;
         grid-row: 1/9;
-        background-color: #16a34a;
+        background-color: none;
     }
 
 }
 
 .modal{
     display: none;
+    h2{
+        text-align: center;
+        color: var(--title-color);
+        width: 100%;
+        text-shadow: 1px 1px black;
+
+    }
+    
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -103,7 +123,7 @@ header{
     left: 0;
     background-color: rgba(0, 0, 0, 0.7);
     h4{
-        color: white;
+        color: var(--color-text);
         text-shadow: 1px 1px black;
     }
     #form-create-project{
@@ -112,7 +132,7 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
+        background-color: var(--main-bg-color);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -123,7 +143,8 @@ header{
         button{
             margin: 3px;
             width: 4rem;
-            background-color: none;
+            color: var(--color-text);
+            background-color: var(--botton-blue-color);
             border: none;
             border-radius: 3px;
             box-shadow: 1px 1px 1px 0px black;
@@ -135,11 +156,13 @@ header{
 }
 
 .to-do-container{
+    
     width: 100%;
-    background-color: #ffe; 
+    background-color: var(--main-bg-color); 
 
     .to-do-item{
-        border: 1px solid blue; 
+        border: 1px solid var(--color-text);
+        box-shadow: 1px 1px 2px 0px var(--color-text); 
         padding: 3px; 
         border-radius: 3px;
         display: flex;
@@ -150,7 +173,7 @@ header{
             margin: 3%;
             padding: 3%;
             border-radius: 3px;
-            background-color: #ecfccb;
+            background-color: var(--sec-bg-color);
             width: 70%;
             p{
                 text-overflow: ellipsis;
@@ -168,9 +191,9 @@ header{
                 border: none;
                 width: 2rem;
                 border-radius: 3px ;
-                background-color: gray;
+                background-color: var(--botton-blue-color);
                 margin: 3%;
-                color: white;
+                color: var(--color-text);
                 box-shadow:1px 1px black;
             } 
 
@@ -198,8 +221,8 @@ header{
 
 
 #create-task{
-    width: 90%;
-    height: 90%;
+    width: 50%;
+    height: 70%;
     border-radius: 3px;
     display: flex;
     flex-direction: row;
@@ -207,28 +230,24 @@ header{
     justify-content: center;
     align-items: center;
     border: 1px solid black;
-    background-color: #ffe;
-    h2{
-        text-align: center;
-        width: 100%;
-    }
+    background-color: var(--main-bg-color);
+    
     input{
         margin: 3px;
-        width: 50%;
+        
     }
 
     fieldset{
-        min-width: 80%;
+        width: 40%;
         border-radius: 3px;
     }
-    button{
-        width: 60%;
-        margin: 3%;
-        border: none;
-        color: white;
-        background-color: darkblue;
-        border-radius: 3px;
-    }
+   button{
+    width: 40%;
+   }
     box-shadow: 2px 2px black;
     
+}
+
+.selected{
+    border: 1px solid var(--botton-blue-color)
 }
